增加了一些针对MIPS的结构优化